# goit-ds-hw-03

./: README.md  db.py  main.py  pyproject.toml  scraper.py
