[project]
name = "goit-ds-hw-03"
version = "0.1.0"
description = ""
authors = [
    {name = "LyubovNesterchuk",email = "nesterchuklyubov@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "pymongo (>=4.17.0,<5.0.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "requests (>=2.33.1,<3.0.0)",
    "lxml (>=6.1.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
